[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainScene/MainScene.gd" type="Script" id=1]
[ext_resource path="res://SplashScene/SplashScene.tscn" type="PackedScene" id=2]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="SplashScene" parent="." instance=ExtResource( 2 )]

[connection signal="finish" from="SplashScene" to="." method="_on_SplashScene_finish"]
[connection signal="ready" from="SplashScene" to="." method="_on_SplashScene_ready"]
